# MSDA-custom-op

./: CMakeLists.txt  README.md
src/: ms_deform_attn.h  vision.cpp
src/cuda/: ms_deform_attn_cuda.cu  ms_deform_attn_cuda.h
